[gd_scene load_steps=5 format=2]

[ext_resource path="res://MainWindow.gd" type="Script" id=1]
[ext_resource path="res://panels/MagnifyingGlass.tscn" type="PackedScene" id=2]
[ext_resource path="res://panels/UndoRedo.tscn" type="PackedScene" id=3]
[ext_resource path="res://panels/Canvas.tscn" type="PackedScene" id=4]

[node name="MainWindow" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Canvas" parent="." instance=ExtResource( 4 )]
margin_left = 412.0
margin_top = 24.0
margin_right = 1012.0
margin_bottom = 577.0

[node name="Save" type="Button" parent="."]
margin_right = 157.0
margin_bottom = 20.0
text = "Guardar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UndoRedo" parent="." instance=ExtResource( 3 )]
margin_left = 163.79
margin_top = 0.629959
margin_right = 259.79
margin_bottom = 40.63

[node name="MagnifyingGlass" parent="." instance=ExtResource( 2 )]
margin_left = 8.65584
margin_top = 58.5291
margin_right = 329.656
margin_bottom = 98.5291

[node name="ToolBox" type="Container" parent="."]
margin_left = 11.6652
margin_top = 112.665
margin_right = 326.665
margin_bottom = 568.665
__meta__ = {
"_edit_use_anchors_": false
}
